--- a/client/src/react-components/MaterialTable/style.css
+++ b/client/src/react-components/MaterialTable/style.css
@@ -1,6 +1,15 @@
 p{
     margin: 0;
 }
+.icon{
+    display: inline;
+    vertical-align: middle;
+}
+.text{
+    display: inline;
+    vertical-align: middle;
+
+}
 .theme--dark p{
 color: #f5f5f5;
 }
@@ -33,6 +42,7 @@ span{
 }
 .theme--dark .material{
     filter: brightness(0.9);
+    vertical-align: middle;
 }
 @media only screen and (min-width: 320px)  { body{ font-size: 10px; } 
 .M3Materials{
