--- a/client/src/react-components/MaterialTable/style.scss
+++ b/client/src/react-components/MaterialTable/style.scss
@@ -1,4 +1,4 @@
-@import './chip', './materials.scss', './contingencyMiscs.scss';
+@import './chip', './materials.scss', './contingencyMiscs.scss', 'newMaterial.scss';
 
 p {
   margin: 0;
@@ -77,6 +77,10 @@ span {
     @include material-size(55px);
   }
 
+  .spriteNW-5 {
+    @include component-size(55px);
+  }
+
   .sprite {
     &MT-4 {
       @include material-size(45px);
@@ -86,6 +90,9 @@ span {
     }
     &CP-4 {
       @include chip-size(45px);
+    }
+    &NW-4 {
+      @include component-size(45px);
     }
   }
 
@@ -129,6 +136,9 @@ span {
   .spriteMT-5 {
     @include material-size(55px);
   }
+  .spriteNW-5 {
+    @include component-size(55px);
+  }
 
   .sprite {
     &MT-4 {
@@ -140,8 +150,10 @@ span {
     &CP-4 {
       @include chip-size(45px);
     }
+    &NW-4 {
+      @include component-size(45px);
+    }
   }
-
   .extraDropWrap {
     @include material-size(18px);
     position: absolute;
@@ -179,6 +191,9 @@ span {
   .spriteMT-5 {
     @include material-size(55px);
   }
+  .spriteNW-5 {
+    @include component-size(55px);
+  }
 
   .sprite {
     &MT-4 {
@@ -190,8 +205,10 @@ span {
     &CP-4 {
       @include chip-size(45px);
     }
+    &NW-4 {
+      @include component-size(45px);
+    }
   }
-
   .extraDropWrap {
     @include material-size(18px);
     position: absolute;
@@ -247,6 +264,9 @@ span {
   .spriteMT-5 {
     @include material-size(55px);
   }
+  .spriteNW-5 {
+    @include component-size(55px);
+  }
 
   .sprite {
     &MT-4 {
@@ -257,6 +277,9 @@ span {
     }
     &CP-4 {
       @include chip-size(45px);
+    }
+    &NW-4 {
+      @include component-size(45px);
     }
   }
 
