feat(fix) bug fix

--- a/client/src/react-components/MaterialTable/style.scss
+++ b/client/src/react-components/MaterialTable/style.scss
@@ -547,3 +547,10 @@ span {
 [class^='sprit-'] {
   background-size: 44px auto;
 }
+
+.extraDropWrapNW {
+  @include component-size(18px);
+  position: absolute;
+  margin-left: 0px;
+  margin-top: 0px;
+}
