fix(bug) spirite error

--- a/client/src/react-components/MaterialTable/style.scss
+++ b/client/src/react-components/MaterialTable/style.scss
@@ -1,4 +1,4 @@
-@import './chip', './materials.scss', './contingencyMiscs.scss', 'newMaterial.scss';
+@import './chip', './materials.scss', './contingencyMiscs.scss';
 
 p {
   margin: 0;
