--- a/client/src/react-components/MaterialTable/materials.scss
+++ b/client/src/react-components/MaterialTable/materials.scss
@@ -1,11 +1,11 @@
 .material {
-  background-image: url(./static/materials.png);
+  background-image: url(./static/materials_new.png);
   background-repeat: no-repeat;
   display: inline-block;
 }
 
 @mixin material-size($size) {
-  background-size: $size * 8 $size * 7;
+  background-size: $size * 8 $size * 8;
   width: $size;
   height: $size;
 }
@@ -19,11 +19,11 @@
 }
 .material-MISC-2002,
 .material-MT-2002 {
-  background-position: 0% 16.667%;
+  background-position: 0% 14.286%;
 }
 .material-MISC-3003,
 .material-MT-3003 {
-  background-position: 14.286% 16.667%;
+  background-position: 14.286% 14.286%;
 }
 .material-MISC-3112,
 .material-MT-3112 {
@@ -31,19 +31,19 @@
 }
 .material-MISC-3113,
 .material-MT-3113 {
-  background-position: 28.571% 16.667%;
+  background-position: 28.571% 14.286%;
 }
 .material-MISC-3301,
 .material-MT-3301 {
-  background-position: 0% 33.333%;
+  background-position: 0% 28.571%;
 }
 .material-MISC-3302,
 .material-MT-3302 {
-  background-position: 14.286% 33.333%;
+  background-position: 14.286% 28.571%;
 }
 .material-MISC-3303,
 .material-MT-3303 {
-  background-position: 28.571% 33.333%;
+  background-position: 28.571% 28.571%;
 }
 .material-MISC-3401,
 .material-MT-3401 {
@@ -51,141 +51,150 @@
 }
 .material-MISC-4001,
 .material-MT-4001 {
-  background-position: 42.857% 16.667%;
+  background-position: 42.857% 14.286%;
 }
 .material-MISC-7001,
 .material-MT-7001 {
-  background-position: 42.857% 33.333%;
+  background-position: 42.857% 28.571%;
 }
 .material-MT-2001 {
-  background-position: 0% 50%;
+  background-position: 0% 42.857%;
 }
 .material-MT-2002 {
-  background-position: 14.286% 50%;
+  background-position: 14.286% 42.857%;
 }
 .material-MT-2003 {
-  background-position: 28.571% 50%;
+  background-position: 28.571% 42.857%;
 }
 .material-MT-30011 {
-  background-position: 42.857% 50%;
+  background-position: 42.857% 42.857%;
 }
 .material-MT-30012 {
   background-position: 57.143% 0%;
 }
 .material-MT-30013 {
-  background-position: 57.143% 16.667%;
+  background-position: 57.143% 14.286%;
 }
 .material-MT-30014 {
-  background-position: 57.143% 33.333%;
+  background-position: 57.143% 28.571%;
 }
 .material-MT-30021 {
-  background-position: 57.143% 50%;
+  background-position: 57.143% 42.857%;
 }
 .material-MT-30022 {
-  background-position: 0% 66.667%;
+  background-position: 0% 57.143%;
 }
 .material-MT-30023 {
-  background-position: 14.286% 66.667%;
+  background-position: 14.286% 57.143%;
 }
 .material-MT-30024 {
-  background-position: 28.571% 66.667%;
+  background-position: 28.571% 57.143%;
 }
 .material-MT-30031 {
-  background-position: 42.857% 66.667%;
+  background-position: 42.857% 57.143%;
 }
 .material-MT-30032 {
-  background-position: 57.143% 66.667%;
+  background-position: 57.143% 57.143%;
 }
 .material-MT-30033 {
   background-position: 71.429% 0%;
 }
 .material-MT-30034 {
-  background-position: 71.429% 16.667%;
+  background-position: 71.429% 14.286%;
 }
 .material-MT-30041 {
-  background-position: 71.429% 33.333%;
+  background-position: 71.429% 28.571%;
 }
 .material-MT-30042 {
-  background-position: 71.429% 50%;
+  background-position: 71.429% 42.857%;
 }
 .material-MT-30043 {
-  background-position: 71.429% 66.667%;
+  background-position: 71.429% 57.143%;
 }
 .material-MT-30044 {
-  background-position: 0% 83.333%;
+  background-position: 0% 71.429%;
 }
 .material-MT-30051 {
-  background-position: 14.286% 83.333%;
+  background-position: 14.286% 71.429%;
 }
 .material-MT-30052 {
-  background-position: 28.571% 83.333%;
+  background-position: 28.571% 71.429%;
 }
 .material-MT-30053 {
-  background-position: 42.857% 83.333%;
+  background-position: 42.857% 71.429%;
 }
 .material-MT-30054 {
-  background-position: 57.143% 83.333%;
+  background-position: 57.143% 71.429%;
 }
 .material-MT-30061 {
-  background-position: 71.429% 83.333%;
+  background-position: 71.429% 71.429%;
 }
 .material-MT-30062 {
   background-position: 85.714% 0%;
 }
 .material-MT-30063 {
-  background-position: 85.714% 16.667%;
+  background-position: 85.714% 14.286%;
 }
 .material-MT-30064 {
-  background-position: 85.714% 33.333%;
+  background-position: 85.714% 28.571%;
 }
 .material-MT-30073 {
-  background-position: 85.714% 50%;
+  background-position: 85.714% 42.857%;
 }
 .material-MT-30074 {
-  background-position: 85.714% 66.667%;
+  background-position: 85.714% 57.143%;
 }
 .material-MT-30083 {
-  background-position: 85.714% 83.333%;
+  background-position: 85.714% 71.429%;
 }
 .material-MT-30084 {
-  background-position: 0% 100%;
+  background-position: 0% 85.714%;
 }
 .material-MT-30093 {
-  background-position: 14.286% 100%;
+  background-position: 14.286% 85.714%;
 }
 .material-MT-30094 {
-  background-position: 28.571% 100%;
+  background-position: 28.571% 85.714%;
 }
 .material-MT-30103 {
-  background-position: 42.857% 100%;
+  background-position: 42.857% 85.714%;
 }
 .material-MT-30104 {
-  background-position: 57.143% 100%;
+  background-position: 57.143% 85.714%;
 }
 .material-MT-30115 {
-  background-position: 71.429% 100%;
+  background-position: 71.429% 85.714%;
 }
 .material-MT-30125 {
-  background-position: 85.714% 100%;
+  background-position: 85.714% 85.714%;
 }
 .material-MT-30135 {
   background-position: 100% 0%;
 }
 .material-MT-31013 {
-  background-position: 100% 16.667%;
+  background-position: 100% 14.286%;
 }
 .material-MT-31014 {
-  background-position: 100% 33.333%;
+  background-position: 100% 28.571%;
 }
 .material-MT-31023 {
-  background-position: 100% 50%;
+  background-position: 100% 42.857%;
 }
 .material-MT-31024 {
-  background-position: 100% 66.667%;
+  background-position: 100% 57.143%;
 }
 .material-MT-4001 {
-  background-position: 100% 83.333%;
+  background-position: 100% 71.429%;
+}
+.material-MT-31034 {
+  background-position: 0% 100%;
+}
+.material-MT-30145 {
+  background-position: 14.286% 100%;
+}
+.material-MT-31033 {
+  background-position: 28.571% 100%;
 }
 .material-placeholder {
-  background-position: 100% 100%;
+  background-position: 100% 85.714%;
 }
