--- a/client/src/react-components/MaterialTable/style.scss
+++ b/client/src/react-components/MaterialTable/style.scss
@@ -7,10 +7,10 @@
   height: 1080px;
   z-index: 3;
 }
-.outLayer{
-  content: "";
-  background-image: url("./static/Artboard_1.png");
-}
+// .outLayer{
+//   content: "";
+//   background-image: url("./static/Artboard_1.png");
+// }
 p {
   margin: 0;
 }
