feat(add) Chapter9 materials

--- a/client/src/react-components/MaterialTable/materials.scss
+++ b/client/src/react-components/MaterialTable/materials.scss
@@ -198,3 +198,15 @@
 .material-placeholder {
   background-position: 100% 85.714%;
 }
+.material-MT-31054 {
+  background-position: 85.714% 100% ;
+}
+.material-MT-31043 {
+  background-position: 71.429% 100% ;
+}
+.material-MT-31044 {
+  background-position: 57.143% 100% ;
+}
+.material-MT-31053 {
+  background-position: 42.857% 100% ;
+}
