feat(add) new items for new main story chapter

--- a/client/src/react-components/MaterialTable/materials.scss
+++ b/client/src/react-components/MaterialTable/materials.scss
@@ -269,3 +269,23 @@
   background-position: 59.6247% 49.7051%;
   
 }
+
+.material-MT-31073 {
+  background-position: 69.5442% 49.7051%;
+  
+}
+
+.material-MT-31074 {
+  background-position: 79.4638% 49.7051%;
+  
+}
+
+.material-MT-31083 {
+  background-position: 89.3834% 49.7051%;
+  
+}
+
+.material-MT-31084 {
+  background-position: 99.3029% 49.7051%;
+  
+}
